K3S/tools/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr-http
  namespace: flaresolverr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: flaresolverr.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr-svc
                port:
                  number: 8191
    - host: flaresolverr.k3s.wiserisk.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr-svc
                port:
                  number: 8191
